openshift-files/keycloak-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: keycloak
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
  name: keycloak
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: keycloak
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      labels:
        deployment: keycloak
    spec:
      containers:
      - env:
        - name: DB_ADDR
          value: postgresql-jbpm
        - name: DB_DATABASE
          value: keycloak
        - name: DB_PASSWORD
          value: keycloak
        - name: DB_USER
          value: keycloak
        - name: DB_VENDOR
          value: postgres
        - name: KEYCLOAK_PASSWORD
          value: admin
        - name: KEYCLOAK_USER
          value: admin
        - name: PROXY_ADDRESS_FORWARDING
          value: "true"
        image: quay.io/keycloak/keycloak:legacy
        imagePullPolicy: IfNotPresent
        name: keycloak
        ports:
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/jboss/keycloak/standalone/data
          name: keycloak-storage
      volumes:
      - name: keycloak-storage
        persistentVolumeClaim:
          claimName: keycloak-pvc
