openshift-files/postgres-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgresql-jbpm
  # namespace: student01-namespace
  labels:
    app: postgresql-jbpm
    app.kubernetes.io/component: postgresql
    app.kubernetes.io/instance: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: postgresql
  template:
    metadata:
      labels:
        deployment: postgresql
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      volumes:
        - name: postgresql-storage
          persistentVolumeClaim:
            claimName: postgresql-pvc-2
      containers:
        - name: postgresql
          image: postgres:16.1-alpine3.19
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgresql-storage
              mountPath: /var/lib/postgresql/data/pgdata  # Still mount at pgdata, but PGDATA uses a subdir
          imagePullPolicy: IfNotPresent
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
