openshift-files/keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: keycloak
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
  name: keycloak
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: keycloak
  sessionAffinity: None
  type: ClusterIP
