openshift-files/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-jbpm
  labels:
    app: postgresql-jbpm
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    deployment: postgresql
