openshift-files/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: keycloak
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
  name: keycloak
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: keycloak
    weight: 100
  wildcardPolicy: None
